.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacedrepetition-api-deployment
  namespace: spacedrepetition
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spacedrepetition-api
  template:
    metadata:
      labels:
        app: spacedrepetition-api
    spec:
      containers:
        - name: spacedrepetition-api
          image: digitalphoenixx/spacedrepetition-api:latest
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
