.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spacedrepetition-api-service
  namespace: spacedrepetition
spec:
  selector:
    app: spacedrepetition-api
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
